--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -663,8 +663,8 @@ section {
 .section-title-rentals {
   margin-top: 200px;
   font-size: 36px; 
-  
 }
+
 .services .icon-box {
   text-align: center;
   border: 1px solid #ebebeb;
@@ -1585,6 +1585,8 @@ section {
   text-align: center;
 }
 
+
+
 .column-snow {
   float: right;
   width: 33.33%;  
@@ -1624,6 +1626,7 @@ section {
 --------------------------------------------------------------*/
  /* Three image containers (use 25% for four, and 50% for two, etc) */
  .column {
+  z-index:5;
   float: right;
   width: 33.33%;  
   padding: .001px;
@@ -1656,6 +1659,89 @@ td, th {
   border: 1px solid #f1f1f1;
   text-align: left;
   padding: 8px;
+}
+
+.section-title-rentals {
+  margin-top: 200px;
+  margin-bottom: 50px;
+  font-size: 36px; 
+}
+
+/*---------------------------------------------------------------
+# Product Buttons
+----------------------------------------------------------------*/
+.styled-button-surf {
+  position: absolute; /* set button to an absolute position */
+  top: 50%; /* adjust the top position of the button */
+  left: 16.5%; /* adjust the left position of the button */
+  transform: translate(-50%, -50%); /* center the button */
+  z-index: 2; /* set a higher z-index than the image */
+  color: #fff;
+  border-radius: 4px;
+  padding: 10px 30px 10px 30px;
+  white-space: nowrap;
+  transition: 0.3s;
+  font-size: 16px;
+  display: inline-block;
+  border: 2px solid #a76950;
+  background: rgba(187, 154, 92, 0.5);
+}
+
+.styled-button-snow {
+  position: absolute; /* set button to an absolute position */
+  top: 50%; /* adjust the top position of the button */
+  left: 50%; /* adjust the left position of the button */
+  transform: translate(-50%, -50%); /* center the button */
+  z-index: 2; /* set a higher z-index than the image */
+  color: #fff;
+  border-radius: 4px;
+  padding: 10px 30px 10px 30px;
+  white-space: nowrap;
+  transition: 0.3s;
+  font-size: 16px;
+  display: inline-block;
+  border: 2px solid #a76950;
+  background: rgba(187, 154, 92, 0.8);
+}
+
+.styled-button-skate {
+  position: absolute; /* set button to an absolute position */
+  top: 50%; /* adjust the top position of the button */
+  left: 83.5%; /* adjust the left position of the button */
+  transform: translate(-50%, -50%); /* center the button */
+  z-index: 2; /* set a higher z-index than the image */
+  color: #c5b1cf;
+  border-radius: 4px;
+  padding: 10px 30px 10px 30px;
+  white-space: nowrap;
+  transition: 0.3s;
+  font-size: 16px;
+  display: inline-block;
+  border: 2px solid #a76950;
+  background: rgba(187, 154, 92, 0.5);
+}
+
+.styled-button-surf:hover{
+  background: #a76950;
+  color: #343a40;
+}
+
+.styled-button-snow:hover{
+  background: #a76950;
+  color: #343a40;
+}
+
+.styled-button-skate:hover{
+  background: #a76950;
+  color: #343a40;
+}
+
+
+@media (max-width: 992px) {
+  .styled-button-surf {
+    padding: 7px 20px 8px 20px;
+    margin-right: 15px;
+  }
 }
 	
 		
